fix formfields flex alignments

--- a/src/assets/scss/components/_components-forms.scss
+++ b/src/assets/scss/components/_components-forms.scss
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: first stretch;
+  align-items: stretch;
   gap: 6px;
 }
 
